# SPOC-L1

./: .pylintrc  README.md  gnss.txt  pyproject.toml
src/: __init__.py
src/helpers/: SatPos_00000_ECEF.csv  SatPos_00000_LLA.csv  SatPos_00001_ECEF.csv  SatPos_00001_LLA.csv  SatPos_00002_ECEF.csv  SatPos_00002_LLA.csv  SatPos_00003_ECEF.csv  SatPos_00003_LLA.csv  SatPos_00004_ECEF.csv  SatPos_00004_LLA.csv  SatPos_00005_ECEF.csv  SatPos_00005_LLA.csv  SatPos_00006_ECEF.csv  SatPos_00006_LLA.csv  SatPos_00007_ECEF.csv  SatPos_00007_LLA.csv  SatPos_00008_ECEF.csv  SatPos_00008_LLA.csv  SatPos_00009_ECEF.csv  SatPos_00009_LLA.csv  coordinate.py  extract_mats.py
src/specularpoint/: __init__.py  flight_processor.py  gnss.txt  satellite.py  specular_point.py
tests/: #test_satellite.py#  .~lock.flight_data_ecef.csv#  .~lock.pymap3d_flight_data_ecef.csv#  XL_flight_ecef.csv  XL_flight_lla.csv  eop20160101.txt  flight_data_ecef.csv  flight_data_lla.csv  pymap3d_flight_data_ecef.csv  pyproj_flight_data_ecef.csv  python_flight_data_ecef.csv  skyfield_flight_data_ecef.csv  test_flight_processor.py  test_satellite.py  test_specular_point.py  tle_cygfm_gal.txt  tle_gps_gal.txt  tle_gps_gal_new.txt
