[tool.poetry]
name = "rongowai-l1"
version = "0.1.0"
description = ""
authors = ["Chris Seal <c.seal@auckland.ac.nz>"]

[tool.poetry.dependencies]
python = "^3.10"
sgp4 = "^2.20"
astropy = "^5.0.3"
pytz = "^2022.1"
requests = "^2.27.1"
skyfield = "^1.42"
h5py = "^3.6.0"
pymap3d = "^2.8.0"
pyproj = "^3.3.0"
Pint = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.5"
pytest-dependency = "^0.5.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
